--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,11 @@
     "type": "wordpress-plugin",
     "authors": [
         {
-            "name": "Netzstrategen",
+            "name": "netzstrategen",
             "email": "hallo@netzstrategen.com",
             "homepage": "https://netzstrategen.com"
         }
     ],
-    "dist": {
-        "url": "git@github.com:netzstrategen/wordpress-mo-cache.git",
-        "type": "git"
-    },
     "require": {
         "php": ">=7.0.0",
         "composer/installers": "^1"
